--- a/playground.ipynb
+++ b/playground.ipynb
@@ -75,7 +75,10 @@
    "source": [
     "a = generator.generate_word_combinations('cat')\n",
     "for elem in a[:10]:\n",
-    "    print(elem)"
+    "    print(elem)\n",
+    "\n",
+    "\n",
+    "# fur shows up a lot, maybe we want a penalty for using the same word in too many combinations"
    ],
    "id": "4d9dd3c48d8f1b58",
    "outputs": [
